# StructuredPartition

./: CMakeLists.txt  README.md  do_cmake.sh  source_deps.sh
src/: CMakeLists.txt  ProjectDefs.h  array_helpers.h  assign_blocks_to_procs.cc  assign_blocks_to_procs.h  blocks.cc  blocks.h  final_split.cc  final_split.h  init.cc  init.h  pre_split.cc  pre_split.h  statistics.cc  statistics.h  structured_part.cc  structured_part.h
test/: CMakeLists.txt  test_blocks.cc  test_init.cc  test_pre_split.cc
test/integration/: test_final_split.cc  test_pre_split.cc
test/unit/: test_final_split.cc  test_pre_split.cc
test/utils/: utils.cc  utils.h
